// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for signed in user 1`] = `
<header
  className=""
  data-react-toolbox="app-bar"
>
  <div
    className={undefined}
  >
    <h1
      className=""
    >
      Serverless WebApp Starter
    </h1>
    <nav
      className=""
      data-react-toolbox="navigation"
    >
      <div>
        <div
          className={undefined}
        >
          <a
            href="/profile/home"
            onClick={[Function]}
            style={
              Object {
                "color": "inherit",
                "cursor": "pointer",
                "marginLeft": "24px",
                "textDecoration": "none",
                "textTransform": "uppercase",
              }
            }
          >
            Profile
          </a>
          <a
            href="/profile/sign-out"
            onClick={[Function]}
            style={
              Object {
                "color": "inherit",
                "cursor": "pointer",
                "marginLeft": "24px",
                "textDecoration": "none",
                "textTransform": "uppercase",
              }
            }
          >
            Sign out
          </a>
        </div>
        <div
          className={undefined}
        >
          <div
            className=""
          >
            <button
              className=""
              data-react-toolbox="button"
              disabled={false}
              href={undefined}
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              <span
                aria-label=""
                className="material-icons"
                data-react-toolbox="font-icon"
              >
                account_circle
              </span>
            </button>
            <div
              className=""
              data-react-toolbox="menu"
              style={
                Object {
                  "height": undefined,
                  "width": undefined,
                }
              }
            >
              <div
                className={undefined}
                style={
                  Object {
                    "height": undefined,
                    "width": undefined,
                  }
                }
              />
              <ul
                className={undefined}
                style={undefined}
              >
                <li
                  className=""
                  data-react-toolbox="menu-item"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                >
                  <span
                    className={undefined}
                  />
                  <a
                    href="/profile/home"
                    onClick={[Function]}
                    style={
                      Object {
                        "color": "inherit",
                        "cursor": "pointer",
                        "display": "inline-block",
                        "textDecoration": "none",
                        "width": "100%",
                      }
                    }
                  >
                    Profile
                  </a>
                </li>
                <li
                  className=""
                  data-react-toolbox="menu-item"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                >
                  <span
                    className={undefined}
                  />
                  <a
                    href="/profile/sign-out"
                    onClick={[Function]}
                    style={
                      Object {
                        "color": "inherit",
                        "cursor": "pointer",
                        "display": "inline-block",
                        "textDecoration": "none",
                        "width": "100%",
                      }
                    }
                  >
                    Sign out
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </nav>
  </div>
</header>
`;

exports[`renders correctly for signed out user 1`] = `
<header
  className=""
  data-react-toolbox="app-bar"
>
  <div
    className={undefined}
  >
    <h1
      className=""
    >
      Serverless WebApp Starter
    </h1>
    <nav
      className=""
      data-react-toolbox="navigation"
    >
      <div>
        <div
          className={undefined}
        >
          <a
            href="/profile/register"
            onClick={[Function]}
            style={
              Object {
                "color": "inherit",
                "cursor": "pointer",
                "marginLeft": "24px",
                "textDecoration": "none",
                "textTransform": "uppercase",
              }
            }
          >
            Register
          </a>
          <a
            href="/profile/sign-in"
            onClick={[Function]}
            style={
              Object {
                "color": "inherit",
                "cursor": "pointer",
                "marginLeft": "24px",
                "textDecoration": "none",
                "textTransform": "uppercase",
              }
            }
          >
            Sign In
          </a>
        </div>
        <div
          className={undefined}
        >
          <div
            className=""
          >
            <button
              className=""
              data-react-toolbox="button"
              disabled={false}
              href={undefined}
              onClick={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchStart={[Function]}
              type="button"
            >
              <span
                aria-label=""
                className="material-icons"
                data-react-toolbox="font-icon"
              >
                more_vert
              </span>
            </button>
            <div
              className=""
              data-react-toolbox="menu"
              style={
                Object {
                  "height": undefined,
                  "width": undefined,
                }
              }
            >
              <div
                className={undefined}
                style={
                  Object {
                    "height": undefined,
                    "width": undefined,
                  }
                }
              />
              <ul
                className={undefined}
                style={undefined}
              >
                <li
                  className=""
                  data-react-toolbox="menu-item"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                >
                  <span
                    className={undefined}
                  />
                  <a
                    href="/profile/register"
                    onClick={[Function]}
                    style={
                      Object {
                        "color": "inherit",
                        "cursor": "pointer",
                        "display": "inline-block",
                        "textDecoration": "none",
                        "width": "100%",
                      }
                    }
                  >
                    Register
                  </a>
                </li>
                <li
                  className=""
                  data-react-toolbox="menu-item"
                  onClick={[Function]}
                  onMouseDown={[Function]}
                  onTouchStart={[Function]}
                >
                  <span
                    className={undefined}
                  />
                  <a
                    href="/profile/sign-in"
                    onClick={[Function]}
                    style={
                      Object {
                        "color": "inherit",
                        "cursor": "pointer",
                        "display": "inline-block",
                        "textDecoration": "none",
                        "width": "100%",
                      }
                    }
                  >
                    Sign in
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </nav>
  </div>
</header>
`;
